--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -108,7 +108,7 @@ For the IRE case study, we gathered measurements from eddy covariance platforms 
 
 For the Fukushima case study, due to the direction of the plume, we gathered measurements from flux towers located in the Northern Hemisphere (Western United States), which are part of the Ameriflux network (https://ameriflux.lbl.gov/). To increase confidence that we are seeing a real effect, we contrasted the results from Northern Hemisphere sites, where we expect a higher likelihood of impact, to measurements from flux towers located in the Southern Hemisphere, which are part of the OzFlux network \citep{cleverly2011alice}. We selected sites with sufficient long-term data to cover the 2011 date of the disaster and excluded boreal sites with extreme snow cover related seasonality. We ultimately selected three sites (US-Wrc, US-GLE, and OZ-Mul, Figure 1B).
 
-\subsection{Modeling Approach}
+\subsection{Statistical Approach}
 We processed each data file by 1) excluding nighttime measurements based on photosynthetic photon flux density (PPFD > 100 µmol m-2 s-1) or net solar radiation (netrad > 0 $W/m^2$) and 2) defining an “event period” following the publicly released date of the abnormal release. We focused on the following variables as potentially containing a signature of the release : carbon dioxide, carbon dioxide flux (fc), latent heat (le), and sensible heat flux (h). Conversely, the following were treated as independent explanatory variables: wind speed, precipitation, atmospheric pressure, relative humidity, photosynthetic photon flux density, air temperature, and net radiation. Additionally, we used wind direction data from the eddy flux towers to determine when or if any released material might plausibly reach a particular location. Each of these variables were recorded by the flux tower instrumentation at a 30 minute (min) interval barring any gaps due to missing data.
 
 To begin our analysis, we screened all pairwise, linear relationships between the aforementioned independent and dependent variables using a linear regression fit between each pair for the entire period of record (n=51). Variable pairs were excluded from further analysis if the overall coefficient of determination ($R^2$) was less than 0.1. This low threshold was chosen to maximize the number of pairs that could potentially be investigated more deeply. From visual inspection, we determined that many of the rejected variable pairs appeared to have a nonlinear relationship. As our aim was to develop a methodology that could be applied broadly to other sites, we did not apply transformation to linearize these relationships without a physical justification for the transformation. Evaluating an exhaustive list of data transformations was beyond the scope of the present effort. After identification of candidate variable pairs, we fit an interaction model of the following form where Y represents a continuous response (e.g., $CO_2$, latent heat, etc.), $X_1$ is an independent variable (e.g., air temperature, humidity, etc.), $W_2$ is a categorical variable representing the “period” of observation (i.e., during, before, or after, the event), $\beta$0 is the intercept, $\beta$1,2 are slope parameters for $X_1$ and $W_2$ respectively, and $\beta$3 is the slope parameter for the interaction between $X_1$ and $W_2$:
