--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -97,19 +97,19 @@ A potential alternative to active monitoring is passive monitoring \citep[e.g., 
 
 Our utilization of flux tower records for event discrimination stands in contrast to the typical use of data from the towers for direct carbon balance accounting. Whereas carbon balance accounting activities deal directly in the units of the measured data for computing quantities like net ecosystem exchange \citep{baldocchiInterannualVariabilityNet2018}, our use treats each variable as potentially including an indirect signal (i.e. an anomaly from normal vegetation behavior) of radioactive material deposition irrespective of its physical properties (e.g., mass, volume, etc). In this way, we are not directly measuring radioactive deposition but rather leveraging the fact that existing ecosystem monitoring records reflect vegetation photosynthesis rates and general stress condition of site vegetation in a known way \citep{nobelPhysicochemicalEnvironmentalPlant2020}.
 
-We specifically focused on short-term anomalies in the vegetation response data (on the order of days to weeks) due to either potential deposition of radioactive material or direct sensor effects rather than chronic long-term signals on the order of years to decades. In the first case study, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from the Institut des Radioelements (IRE) in Belgium (hereafter called the known release location or the “facility”) nominally occurring on August 23, 2008. The IRE release originated from waste tanks into the atmosphere and lasted for several days totaling 50 GBq $^{131}I$ \citep{carle2010individual}. For example, grass samples collected in the vicinity of the facility found radioactivity levels of 5000 Bq/kg. In the second case study, we further explored potential signals in flux tower data related to the Fukushima Nuclear Disaster nominally occurring on March 11, 2011 releasing a massive radioactive plume that reached North America in 5 days that eventually dispersed throughout the entire northern hemisphere \citep{meszarosPredictabilityDispersionFukushimaderived2016}. We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other eddy flux towers. While the body of literature on direct or indirect effects of radioactive material on vegetation is limited, we expect that exposure may cause declines in photosynthetic $CO_2$ uptake. This may be expressed as a change in the slope of the $CO_2$ relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure.
+We specifically focused on short-term anomalies in the vegetation response data (on the order of days to weeks) due to either potential deposition of radioactive material or direct sensor effects rather than chronic long-term signals on the order of years to decades. In the first case study, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from the Institut des Radioelements (IRE) in Belgium (hereafter called the known release location or the “facility”) nominally occurring on August 23, 2008. The IRE release originated from waste tanks into the atmosphere and lasted for several days totaling 50 GBq $^{131}I$ \citep{carle2010individual}. For example, grass samples collected in the vicinity of the facility found radioactivity levels of 5000 Bq/kg. In the second case study, we further explored potential signals in flux tower data related to the Fukushima Nuclear Disaster nominally occurring on March 11, 2011 releasing a massive radioactive plume that reached North America in 5 days that eventually dispersed throughout the entire northern hemisphere \citep{meszarosPredictabilityDispersionFukushimaderived2016}. We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other eddy flux towers. While the body of literature on direct or indirect effects of radioactive material on vegetation is limited, prior studies support the idea that exposure may cause declines in photosynthetic $CO_2$ uptake. For example, \citet{gudkovEffectIonizingRadiation2019} detail how a wide range of exposure doses and durations can inhibit CO2 uptake as a result of enzymatic effects on the Calvin Cycle. For the present study, we lack leaf-level observations to directly establish inhibition and instead express it as a change in the slope of the $CO_2$ relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure.
 
 
 \section{Methods}
 
 \subsection{Data Description}
 
-For the IRE case study, we gathered measurements from eddy covariance platforms (i.e., “flux towers”) located in Belgium, which are part of the ICOS (Integrated Carbon Observation System) network available through the European Fluxes Database (http://www.europe-fluxdata.eu/). Three sites in proximity to the known release location had sufficient long-term data for our anticipated data mining efforts (BE-Lon, BE-Bra, and BE-Vie sites, Figure 1A). Each of the three flux tower sites are located within a crop ecosystem type and had almost 10 years of data available from 2004 through 2013 recorded at 30 min intervals. While BE-Lon had a near-continuous data record during this period, BE-Bra had a long period of missing data in 2005, and both BE-Bra and BE-Vie had a long period of missing data in 2009. The distance between IRE and the flux tower sites are approximately 19 km, 95 km, and 105 km for the BE-Lon, BE-Bra, and BE-Vie, respectively.
+For both the IRE and Fukushima case studiesy, we gathered measurements from eddy covariance platforms (i.e., “flux towers”) spanning multiple years. For the IRE case study, we targeted towers located in Belgium, which are part of the ICOS (Integrated Carbon Observation System) network available through the European Fluxes Database (http://www.europe-fluxdata.eu/). Three sites in proximity to the known release location had sufficient long-term data for our anticipated data mining efforts (BE-Lon, BE-Bra, and BE-Vie sites, Figure 1A). Each of the three flux tower sites are located within a crop ecosystem type and had almost 10 years of data available from 2004 through 2013 recorded at 30 min intervals. While BE-Lon had a near-continuous data record during this period, BE-Bra had a long period of missing data in 2005, and both BE-Bra and BE-Vie had a long period of missing data in 2009. The distance between IRE and the flux tower sites are approximately 19 km, 95 km, and 105 km for the BE-Lon, BE-Bra, and BE-Vie, respectively.
 
 For the Fukushima case study, due to the direction of the plume, we gathered measurements from flux towers located in the Northern Hemisphere (Western United States), which are part of the Ameriflux network (https://ameriflux.lbl.gov/). To increase confidence that we are seeing a real effect, we contrasted the results from Northern Hemisphere sites, where we expect a higher likelihood of impact, to measurements from flux towers located in the Southern Hemisphere, which are part of the OzFlux network \citep{cleverly2011alice}. We selected sites with sufficient long-term data to cover the 2011 date of the disaster and excluded boreal sites with extreme snow cover related seasonality. We ultimately selected three sites (US-Wrc, US-GLE, and OZ-Mul, Figure 1B).
 
 \subsection{Statistical Approach}
-We processed each data file by 1) excluding nighttime measurements based on photosynthetic photon flux density (PPFD > 100 µmol m-2 s-1) or net solar radiation (netrad > 0 $W/m^2$) and 2) defining an “event period” following the publicly released date of the abnormal release. We focused on the following variables as potentially containing a signature of the release : carbon dioxide, carbon dioxide flux (fc), latent heat (le), and sensible heat flux (h). Conversely, the following were treated as independent explanatory variables: wind speed, precipitation, atmospheric pressure, relative humidity, photosynthetic photon flux density, air temperature, and net radiation. Additionally, we used wind direction data from the eddy flux towers to determine when or if any released material might plausibly reach a particular location. Each of these variables were recorded by the flux tower instrumentation at a 30 minute (min) interval barring any gaps due to missing data.
+We processed each data file by 1) excluding nighttime measurements based on photosynthetic photon flux density (PPFD > 100 µmol m-2 s-1) or net solar radiation (netrad > 0 $W/m^2$) and 2) defining an “event period” following the publicly released date of the abnormal release. We focused on the following variables as potentially containing a signature of the release : carbon dioxide, carbon dioxide flux (fc), latent heat (le), and sensible heat flux (h). Conversely, the following were treated as independent explanatory variables: wind speed, precipitation, atmospheric pressure, relative humidity, photosynthetic photon flux density, air temperature, and net radiation. Additionally, we used wind direction data from the eddy flux towers to determine when or if any released material might plausibly reach a particular location. All of the aforementioned data for each of these variables obtained from flux tower instrumentation recorded at a 30 minute (min) interval barring any gaps due to missing data.
 
 To begin our analysis, we screened all pairwise, linear relationships between the aforementioned independent and dependent variables using a linear regression fit between each pair for the entire period of record (n=51). Variable pairs were excluded from further analysis if the overall coefficient of determination ($R^2$) was less than 0.1. This low threshold was chosen to maximize the number of pairs that could potentially be investigated more deeply. From visual inspection, we determined that many of the rejected variable pairs appeared to have a nonlinear relationship. As our aim was to develop a methodology that could be applied broadly to other sites, we did not apply transformation to linearize these relationships without a physical justification for the transformation. Evaluating an exhaustive list of data transformations was beyond the scope of the present effort. After identification of candidate variable pairs, we fit an interaction model of the following form where Y represents a continuous response (e.g., $CO_2$, latent heat, etc.), $X_1$ is an independent variable (e.g., air temperature, humidity, etc.), $W_2$ is a categorical variable representing the “period” of observation (i.e., during, before, or after, the event), $\beta$0 is the intercept, $\beta$1,2 are slope parameters for $X_1$ and $W_2$ respectively, and $\beta$3 is the slope parameter for the interaction between $X_1$ and $W_2$:
 
@@ -179,9 +179,9 @@ For the Fukushima case study, our objective was to test the sensitivity of our a
 \end{figure}
 
 \section{Discussion}
-Using flux tower records collected closest to and in the prevailing wind direction to the IRE and the Fukushima release locations, our event detection algorithm was able to identify both known abnormal releases and plausible previously unidentified abnormal events. There was broad agreement among the closest flux tower and more distant flux towers as to the timing and frequency of these releases, and our approach was supported by the loss of signal at flux towers outside of the prevailing wind direction. This suggests that, at the very least, given a facility known to have a prior abnormal release, flux tower networks are capable of providing a means of passive monitoring to detect subsequent events as well as information on the environmental conditions before, during, and after the event. Furthermore, our approach has promise for situations when there is not a prior known abnormal release. In these cases, it may be possible to continuously mine flux tower records (as they become available) for events that exceed some threshold identified in a more comprehensive cross-site, cross-event benchmarking study.
+Using flux tower records collected closest to and in the prevailing wind direction to the IRE and the Fukushima release locations, our event detection algorithm was able to identify both known abnormal releases and plausible previously unidentified abnormal events. There was broad agreement among the closest flux tower and more distant flux towers as to the timing and frequency of these releases, and our approach was supported by the loss of signal at flux towers outside of the prevailing wind direction. This suggests that, at the very least, given a facility known to have a prior abnormal release, flux tower networks are capable of providing a means of passive monitoring to detect subsequent events as well as information on the environmental conditions before, during, and after the event. Furthermore, our approach has promise for situations when there is not a prior known abnormal release. In these cases, it may be possible to continuously mine flux tower records (as they become available) for events that exceed some threshold identified in a more comprehensive cross-site, cross-event benchmarking study. The delay between data collection and availability to the general community is highly variable among sites and investigators. In the best case scenario, for actively monitored sites with responsive investigators, this can be as little as 6 months. As a result, operationalization of our approach might target post-hoc attribution rather than real-time monitoring applications.
 
-More generally, we show that flux tower records have value for this type of data mining despite the apparent noisiness of the data \citep{fratiniEddyCovarianceFlux2018}. We attribute the sensitivity of our approach to the fact that we fit successive interaction models to limited sections of the data record, and we leveraged bivariate relationships to constrain noisiness in individual data records. Our approach was aided by the fact that this type of scale-free data mining is largely unaffected by systematic errors due to uncertainty in calibration standards and/or low resolution in specific sensor packages deployed on the towers. This is because although such systematic errors may bias the magnitude of overall flux values, which would be a problem for typical uses of flux towers that deal directly in the units of the measured data, they do not reduce the overall confidence in individual values \citep{langfordEddycovarianceDataLow2015}, which for our purposes might represent an abnormal release signal. The ability of our approach to identify a suitable release signature does likely depend on the quality and completeness of the underlying data.
+More generally, we show that flux tower records have value for this type of data mining despite the apparent noisiness of the data \citep[e.g., ][]{fratiniEddyCovarianceFlux2018}. We attribute the sensitivity of our approach to the fact that we fit successive interaction models to limited sections of the data record, and we leveraged bivariate relationships to constrain noisiness in individual data records. Our approach was aided by the fact that this type of scale-free data mining is largely unaffected by systematic errors due to uncertainty in calibration standards and/or low resolution in specific sensor packages deployed on the towers. This is because although such systematic errors may bias the magnitude of overall flux values, which would be a problem for typical uses of flux towers that deal directly in the units of the measured data, they do not reduce the overall confidence in individual values \citep{langfordEddycovarianceDataLow2015}, which for our purposes might represent an abnormal release signal. The ability of our approach to identify a suitable release signature does likely depend on the quality and completeness of the underlying data.
 
 Another contributor to the success of our approach was our ability to compare event detections at  close towers in prevailing wind directions against more distant towers (refer to Figure 1), increasing our confidence that we were seeing a true signal and not spurious noise. The relatively dense networks of flux towers with long data records leveraged in both locations also aided these case studies. This level of flux tower density may be found in the United States, Western/Central Europe, Japan, and Australia, which have high densities of flux towers, but not throughout the rest of the world \citep{baldocchi2001fluxnet,pastorello2020fluxnet2015}. As a result, this may impose geographical limits on our approach, although installation and maintenance of new flux towers in locations of interest may be cost effective compared to other monitoring approaches. Another attribute that likely aided our investigations was the fact that all three of the flux towers we examined were located in similar agricultural and forested ecosystem types for the IRE and Fukushima case studies respectively. Although investigating whether or not flux tower combinations with differing ecosystems would yield similar results is beyond the scope of the present study, we suspect that the data records among towers in disparate ecosystem types could differ too drastically to be of comparative use. For example, \citet{pastorello2020fluxnet2015} show that towers in the crop ecosystem type, of which all three sites used in this study belong, have a relatively narrow distribution of fluxes (i.e., gross primary production, GPP) compared to towers in the grassland or evergreen broadleaf forest types. One reason for this narrow spread in crop ecosystems may be the relative homogeneity of flux tower footprints in crop ecosystems, which typically extend to within 1000m of the tower depending on atmospheric conditions \citep[e.g., wind speed and direction,][]{chuRepresentativenessEddyCovarianceFlux2021}. Given that towers in other ecosystem types with a more heterogeneous flux tower footprint have a wider distribution of fluxes \citep[e.g.][]{pastorello2020fluxnet2015}, we suspect that having all the towers in the IRE case study located in a homogenous ecosystem type was helpful in reducing the spikiness and spread of the data. 
 
