--- a/manuscript/fluxnet.bib
+++ b/manuscript/fluxnet.bib
@@ -262,3 +262,19 @@
   pages    = {8697},
   keywords = {tocite}
 }
+
+@article{gudkovEffectIonizingRadiation2019,
+  title    = {Effect of Ionizing Radiation on Physiological and Molecular Processes in Plants},
+  author   = {Gudkov, Sergey V. and Grinberg, Marina A. and Sukhov, Vladimir and Vodeneev, Vladimir},
+  year     = {2019},
+  month    = jun,
+  journal  = {Journal of Environmental Radioactivity},
+  volume   = {202},
+  pages    = {8--24},
+  issn     = {0265931X},
+  doi      = {10.1016/j.jenvrad.2019.02.001},
+  urldate  = {2024-11-05},
+  langid   = {english},
+  keywords = {tocite},
+  file     = {/Volumes/358572/Zotero/storage/LJ9MHUH9/Gudkov et al. - 2019 - Effect of ionizing radiation on physiological and .pdf}
+}
