--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -97,7 +97,9 @@ A potential alternative to active monitoring is passive monitoring \citep[e.g., 
 
 Our utilization of flux tower records for event discrimination stands in contrast to the typical use of data from the towers for direct carbon balance accounting. Whereas carbon balance accounting activities deal directly in the units of the measured data for computing quantities like net ecosystem exchange \citep{baldocchiInterannualVariabilityNet2018}, our use treats each variable as potentially including an indirect signal (i.e. an anomaly from normal vegetation behavior) of radioactive material deposition irrespective of its physical properties (e.g., mass, volume, etc). In this way, we are not directly measuring radioactive deposition but rather leveraging the fact that existing ecosystem monitoring records reflect vegetation photosynthesis rates and general stress condition of site vegetation in a known way \citep{nobelPhysicochemicalEnvironmentalPlant2020}.
 
-We specifically focused on short-term anomalies in the vegetation response data (on the order of days to weeks) due to either potential deposition of radioactive material or direct sensor effects rather than chronic long-term signals on the order of years to decades. In the first case study, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from the Institut des Radioelements (IRE) in Belgium (hereafter called the known release location or the “facility”) nominally occurring on August 23, 2008. The IRE release originated from waste tanks into the atmosphere and lasted for several days totaling 50 GBq $^{131}I$ \citep{carle2010individual}. For example, grass samples collected in the vicinity of the facility found radioactivity levels of 5000 Bq/kg. In the second case study, we further explored potential signals in flux tower data related to the Fukushima Nuclear Disaster nominally occurring on March 11, 2011 releasing a massive radioactive plume that reached North America in 5 days that eventually dispersed throughout the entire northern hemisphere \citep{meszarosPredictabilityDispersionFukushimaderived2016}. We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other eddy flux towers. While the body of literature on direct or indirect effects of radioactive material on vegetation is limited, prior studies support the idea that exposure may cause declines in photosynthetic $CO_2$ uptake. For example, \citet{gudkovEffectIonizingRadiation2019} detail how a wide range of exposure doses and durations can inhibit CO2 uptake as a result of enzymatic effects on the Calvin Cycle. For the present study, we lack leaf-level observations to directly establish inhibition and instead express it as a change in the slope of the $CO_2$ relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure.
+We specifically focused on short-term anomalies in the vegetation response data (on the order of days to weeks) due to either potential deposition of radioactive material or direct sensor effects rather than chronic long-term signals on the order of years to decades. In the first case study, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from the Institut des Radioelements (IRE) in Belgium nominally occurring on August 23, 2008. This release originated from waste tanks into the atmosphere and lasted for several days totaling 50 GBq $^{131}I$. The release went unreported (and possibly undetected) for several days. The first measurements in the vicinity of the facility were not taken until August 28th. These measurements found radioactivity levels of 5,000 Bq/kg in grass samples and led to a public health advisory for a 5km zone extending in a northeasterly direction from the facility \citep{carle2010individual}. Owing to the aforementioned measurement delays and the limited extent of the IRE release, we lack numeric estimates of the activity concentrations at tower locations. In the second case study, we further explored potential signals in flux tower data related to the Fukushima Nuclear Disaster occurring on March 11, 2011 releasing a massive radioactive plume that reached North America in 5 days that eventually dispersed throughout the entire northern hemisphere. An atmospheric dispersion study by \citet{meszarosPredictabilityDispersionFukushimaderived2016} estimates that our selected tower locations experienced deposition of particulate matter in the range of 0.44 - 31.08 $mBq/m^{3}$.
+
+We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other eddy flux towers. While the body of literature on direct or indirect effects of radioactive material on vegetation is limited, prior studies support the idea that exposure may cause declines in photosynthetic $CO_2$ uptake. For example, \citet{gudkovEffectIonizingRadiation2019} detail how a wide range of exposure doses and durations can inhibit CO2 uptake as a result of enzymatic effects on the Calvin Cycle. For the present study, we lack leaf-level observations to directly establish inhibition and instead express it as a change in the slope of the $CO_2$ relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure.
 
 
 \section{Methods}
@@ -117,7 +119,7 @@ To begin our analysis, we screened all pairwise, linear relationships between th
 
 This interaction model was fit for a window of time encompassing the known release event and for every other possible window in the period-of-record. The overall length of the window was treated as an adjustable hyperparameter since the length of time for an abnormal material release to reach the footprint of the flux tower may be event-dependent and/or unknown. In addition, the length of time for deposited material to induce a possible vegetation response (or at least a flux data anomaly) is an unknown quantity. Thus, in the default base case, we set the window length (n\_days) as 7 days, but we ran hyperparameter experiments to determine the result of setting it to longer periods of 10 and 14 days. The window length affects the duration of time designated as before and after the event. The period of time designated as during the event was set as 2 days in all cases. We compared the effect size of the interaction term ($\beta$3) during the event-encompassing window against all other windows in a “rolling” analysis. Therefore, the overall analysis compares the interaction term of the window of the known event against a window centered on every other observation. Specific windows that had an effect size at least as large as that of the known event and with wind conditions defined as “towards” the flux tower were flagged as “event detections”.
 
-In order to flag event detections, we defined several adjustable hyperparameters to account for uncertainty surrounding atmospheric transport and the timing of any possible responses to material deposition. The first hyperparameter we defined, wind\_tolerance, reflects the range around the bearing from the facility to the tower location which counts as towards the tower. In the base default case, we set wind\_tolerance to 10 degrees, but we explored setting it to smaller values down to 5 degrees and larger values up to 20 degrees. The second hyperparameter we defined, event\_quantile\_effect, handles the unknown travel time of any materials to be deposited via an abnormal release or what, if any, delays exist between deposition and vegetation response. Rather than simply selecting the maximum value of $\beta$3 during a given window or the value at the exact time of the event, the value of event\_quantile\_effect is set to correspond with a specific quantile of all $\beta$3 values during the event window. In the base default case, this was set at 0.9, but we explored values as low as 0.5. All statistical analyses were carried out using the statsmodels Python package (Seabold and Perktold, 2009). Our processing scripts are openly available at [doi link], and we refer readers to the original providers for data access.
+In order to flag event detections, we defined several adjustable hyperparameters to account for uncertainty surrounding atmospheric transport and the timing of any possible responses to material deposition. The first hyperparameter we defined, \emph{wind\_tolerance}, reflects the range around the bearing from the facility to the tower location which we count as towards the tower. In the base default case, we set \emph{wind\_tolerance} to 10 degrees, but we explored setting it to smaller values down to 5 degrees and larger values up to 20 degrees. The second hyperparameter we defined, \emph{event\_quantile\_effect}, handles the unknown travel time of any materials to be deposited via an abnormal release or what, if any, delays exist between deposition and vegetation response. Rather than simply selecting the maximum value of $\beta$3 during a given window or the value at the exact time of the event, the value of \emph{event\_quantile\_effect} is set to correspond with a specific quantile of all $\beta$3 values during the event window. In the base default case, this was set at 0.9, but we explored values as low as 0.5. All statistical analyses were carried out using the statsmodels Python package (Seabold and Perktold, 2009). Our processing scripts are openly available at [doi link], and we refer readers to the original providers for data access.
 
 \begin{figure}
 	\centering
@@ -189,10 +191,6 @@ The biggest improvements to our approach would likely come from coupling our dat
 
 The fact that we were able to identify known releases (along with potential unidentified abnormal events) in the data records from both a large event (i.e. Fukushima) as well as a smaller event despite not having a detailed radiological or atmospheric transport model is a strength of our approach. Furthermore, our approach is not limited to a radiological context, any abnormal event that affects the plant community and is reflected in flux tower data is a potential target. Because our approach is light-weight and resistant to systematic errors in the observational record, it has broad applicability beyond specific constituents and ecosystem types to identify a wide variety of limited-duration impacts to the plant community within flux tower footprints to ensure human health and industrial safety.
 
-% \section{Data Availability Statement}
-
-% All code associated with this manuscript will be made available by the time of publication (or earlier pending the conclusion of US Department of Energy approvals) with a Zenodo DOI at: \href{https://doi.org}{https://doi.org}
-
 \bibliographystyle{jsta}
 \bibliography{fluxnet}
 
@@ -226,7 +224,6 @@ Not applicable
 
 No new data was produced in this study. All original data used is available publicly from their respective sources and archived permanently with restrictions on redistribution. These can be found at \url{http://www.europe-fluxdata.eu/}, \url{https://fluxnet.org/}, and \citep{cleverly2011alice}.
 
-Release of computer code and secondary data reuse that supports the results and analyses of the paper are pending a United State Department of Energy Review pursuant to \url{https://www.osti.gov/doecode/FAQs#how-do-i-announce-software-with-an-access-limitation-to-osti}.
-
+Computer code and secondary data reuse that supports the results and analyses of the paper are available at: \href{https://doi.org/10.5281/zenodo.13845254}{https://doi.org/10.5281/zenodo.13845254}.
 
 \end{document}
