--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -119,7 +119,9 @@ To begin our analysis, we screened all pairwise, linear relationships between th
 
 This interaction model was fit for a window of time encompassing the known release event and for every other possible window in the period-of-record. The overall length of the window was treated as an adjustable hyperparameter since the length of time for an abnormal material release to reach the footprint of the flux tower may be event-dependent and/or unknown. In addition, the length of time for deposited material to induce a possible vegetation response (or at least a flux data anomaly) is an unknown quantity. Thus, in the default base case, we set the window length (n\_days) as 7 days, but we ran hyperparameter experiments to determine the result of setting it to longer periods of 10 and 14 days. The window length affects the duration of time designated as before and after the event. The period of time designated as during the event was set as 2 days in all cases. We compared the effect size of the interaction term ($\beta$3) during the event-encompassing window against all other windows in a “rolling” analysis. Therefore, the overall analysis compares the interaction term of the window of the known event against a window centered on every other observation. Specific windows that had an effect size at least as large as that of the known event and with wind conditions defined as “towards” the flux tower were flagged as “event detections”.
 
-In order to flag event detections, we defined several adjustable hyperparameters to account for uncertainty surrounding atmospheric transport and the timing of any possible responses to material deposition. The first hyperparameter we defined, \emph{wind\_tolerance}, reflects the range around the bearing from the facility to the tower location which we count as towards the tower. In the base default case, we set \emph{wind\_tolerance} to 10 degrees, but we explored setting it to smaller values down to 5 degrees and larger values up to 20 degrees. The second hyperparameter we defined, \emph{event\_quantile\_effect}, handles the unknown travel time of any materials to be deposited via an abnormal release or what, if any, delays exist between deposition and vegetation response. Rather than simply selecting the maximum value of $\beta$3 during a given window or the value at the exact time of the event, the value of \emph{event\_quantile\_effect} is set to correspond with a specific quantile of all $\beta$3 values during the event window. In the base default case, this was set at 0.9, but we explored values as low as 0.5. All statistical analyses were carried out using the statsmodels Python package (Seabold and Perktold, 2009). Our processing scripts are openly available at [doi link], and we refer readers to the original providers for data access.
+In order to flag event detections, we defined several adjustable hyperparameters to account for uncertainty surrounding atmospheric transport and the timing of any possible responses to material deposition. The first hyperparameter we defined, \emph{wind\_tolerance}, reflects the range around the bearing from the facility to the tower location which we count as towards the tower. In the base default case, we set \emph{wind\_tolerance} to 10 degrees, but we explored setting it to smaller values down to 5 degrees and larger values up to 20 degrees. The second hyperparameter we defined, \emph{event\_quantile\_effect}, handles the unknown travel time of any materials to be deposited via an abnormal release or what, if any, delays exist between deposition and vegetation response. Rather than simply selecting the maximum value of $\beta$3 during a given window or the value at the exact time of the event, the value of \emph{event\_quantile\_effect} is set to correspond with a specific quantile of all $\beta$3 values during the event window. In the base default case, this was set at 0.9, but we explored values as low as 0.5. Taken together, here is the overall logic we used to flag an event detection: consider a scenario where the effect size value (corresponding to the \emph{event\_quantile\_effect} of the distribution of effect sizes during the \emph{n\_days} window length) during a known event is X at a tower which is Z bearing from the known release location. An event detection would be flagged during any period where the effect size is $\geq$ X and the wind direction is Z $\pm$ \emph{wind\_tolerance}.
+
+All statistical analyses in the present study were carried out using the statsmodels Python package (Seabold and Perktold, 2009). Our processing scripts are openly available at \href{https://doi.org/10.5281/zenodo.13845254}{https://doi.org/10.5281/zenodo.13845254}, and we refer readers to the original providers for data access.
 
 \begin{figure}
 	\centering
@@ -132,9 +134,9 @@ In order to flag event detections, we defined several adjustable hyperparameters
 
 For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51, Table S1), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model ($R^2$ > 0.05) and a strong event effect size (Table 1). Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. Note also how during and after the known abnormal release, the slopes of the relationships between $CO_2$ and air temperature become less negative than before the event, with lower than expected $CO_2$ at low air temperature (Figure 2A).
 
-Despite the similar effect size at the three tower sites during the abnormal release event, they differed substantially in the degree to which they uniquely flagged the known release event. At the BE-Lon and BE-Vie sites, our event detection algorithm identified the known release and only a few other time periods as potential abnormal releases (Figure 3). Conversely, at the northerly BE-Bra site, the algorithm was not able to identify the known release event distinct from background noise. This can be seen in the rate of event detections ($\alpha$) at each site, whereby it was less than 1\% at the BE-Lon and BE-Vie sites, but was greater than 2\% at the BE-Bra site. It is notable that this ability to uniquely detect the known release along with a plausible number of additional event detections corresponds with the fraction of the abnormal release period when the wind was pointed from the release location towards the respective tower (using the default base case wind tolerance of 10 deg) which was much lower at the BE-Bra site (5\%) compared to the BE-Lon and BE-Vie sites (34\% Table 1). 
+Despite the similar effect size at the three tower sites during the abnormal release event, they differed substantially in the degree to which they uniquely flagged the known release event. At the BE-Lon and BE-Vie sites, our event detection algorithm identified the known release and only a few other time periods as potential abnormal releases (Figure 3). Conversely, at the northerly BE-Bra site, the algorithm was not able to identify the known release event distinct from background noise. This can be seen in the rate of event detections ($\alpha$) at each site, calculated as the number of event detections divided by the total number of rolling windows in the period of record. This rate was less than 1\% at the BE-Lon and BE-Vie sites, but was greater than 2\% at the BE-Bra site. It is notable that this ability to uniquely detect the known release along with a plausible number of additional event detections corresponds with the fraction of the abnormal release period when the wind was pointed from the release location towards the respective tower. The fraction of the period of record where the wind was pointed from the facility toward the flux towers was much lower at the BE-Bra site (5\%) compared to the BE-Lon and BE-Vie sites (34\% Table 1). 
 
-To increase our confidence that event detections were not dependent on the specific hyperparameters settings in our base-case setup, we ran an exhaustive cross-validation set of hyperparameter experiments. For this effort, we tested every possible combination of values for wind tolerance, number of days, and the event quantile effect. Across reasonable values of specific hyperparameters, we found that their magnitudes had little effect on the rate at which events were flagged as potential abnormal releases as even in the most extreme cases, we did not see detection rates exceeding 1\%. We did, however, observe that the event detection was related to the window length and event quantile parameters as shown by the slope of the line in Figure 4. Although increasing values of the event quantile parameter would hypothetically increase event detection rates, we do not see value in setting this parameter below the median. Similarly, increasing the magnitude of the window length parameter would also likely increase the event detection rate but here too we do not see value in setting this parameter beyond 14 days given the results of prior atmospheric modeling efforts \citep[e.g.][]{meszarosPredictabilityDispersionFukushimaderived2016}.
+To increase our confidence that event detections were not dependent on the specific hyperparameters settings in our base-case setup, we ran an exhaustive cross-validation set of hyperparameter experiments. For this effort, we tested every possible combination of values for wind tolerance, number of days, and the event quantile effect. Across reasonable values of specific hyperparameters, we found that their magnitudes had little effect on the rate at which events were flagged as potential abnormal releases as even in the most extreme cases, we did not see detection rates exceeding 1\%. We did, however, observe that the event detection was related to the window length and event quantile parameters as shown by the slope of the line in Figure 4. Although increasing values of the event quantile parameter above the limit of our tests ($>$ 0.9) would hypothetically increase event detection rates, we do not show this due to the noisiness of the extreme quantiles of effect size distributions. Additionally, we do not show tests setting this parameter below the median because it would lead to  weak sensitivity to abnormal events. In a similar fashion as the event quantile parameter, increasing the magnitude of the window length parameter would also likely increase the event detection rate but here too we do not show tests setting this parameter beyond 14 days given the results of prior atmospheric modeling efforts showing limited deposition at such long time scales \citep[e.g.][]{meszarosPredictabilityDispersionFukushimaderived2016}.
 
 For the Fukushima case study, our objective was to test the sensitivity of our approach to a broad scale abnormal release and to introduce a control design to verify behavior on a flux tower where we expect no impact from any abnormal releases. First, we verified that event detection specificity is present at towers likely to be exposed even across long distances if the abnormal release is large (Figure 5). Then, we found a decrease in event detection specificity and an increase in event detection rate moving from the flux tower expected to be most affected (US-Wrc), to a more distant (likely less affected) tower (US-Gle), to a tower likely not exposed at all to the atmospheric plume (OZ-Mul, Figure 5).
 
